fixed the loading of staffs and manager dropdowns

--- a/templates/gas/GasEdit.html
+++ b/templates/gas/GasEdit.html
@@ -4,7 +4,7 @@
     <div class="form-group col-md-12">
         <label>Site Manager</label>
         <select class="custom-select" v-model="currentGas.site_manager">
-            <option v-for="manager in managers">
+            <option v-for="manager in managers.results">
                 [[ manager.full_name ]]
             </option>
         </select>
@@ -12,7 +12,7 @@
     <div class="form-group col-md-12">
         <label>Site Staffs</label>
         <select class="custom-select" multiple v-model="currentGas.site_staff">
-            <option v-for="staff in staffs">[[ staff.full_name ]]</option>
+            <option v-for="staff in staffs.results">[[ staff.full_name ]]</option>
           </select>
     </div>
     {% endif %}
