--- a/templates/gas/GasAdd.html
+++ b/templates/gas/GasAdd.html
@@ -45,7 +45,7 @@
                 <div class="form-group col-md-6 col-sm-12">
                     <label>Site Manager</label>
                     <select class="custom-select" v-model="newGas.site_manager">
-                        <option v-for="manager in managers">
+                        <option v-for="manager in managers.results">
                             [[ manager.full_name ]]
                         </option>
                     </select>
@@ -53,7 +53,7 @@
                 <div class="form-group col-md-6 col-sm-12">
                     <label>Site Staffs</label>
                     <select class="custom-select" multiple v-model="newGas.site_staff">
-                        <option v-for="staff in staffs">[[ staff.full_name ]]</option>
+                        <option v-for="staff in staffs.results">[[ staff.full_name ]]</option>
                     </select>
                 </div>
                 <div class="form-group col-md-6 col-sm-12">
