--- a/templates/gas/GasTable.html
+++ b/templates/gas/GasTable.html
@@ -12,7 +12,14 @@
         <h1>Manage Gasoline Stations</h1>
         <hr>
         <div class="container">
-            <a type="button" class="btn btn-outline-success" href="{% url 'gas-add' %}">Add Gasoline Station</a>
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-success" href="#" data-toggle="modal" data-target="#gasModal">Add
+                    Gasoline Station</button>
+                {% if request.user.position == 'Owner' %}
+                <a type="button" class="btn btn-primary" href="{% url 'admin:users_customuser_add' %}"
+                    target="_blank">Add User</a>
+                {% endif %}
+            </div>
         </div>
     </div>
     <div v-if="loading" class="text-center mt-5">
@@ -31,14 +38,12 @@
                             <th scope="col">Site Location</th>
                             <th scope="col">Site Manager</th>
                             <th scope="col">Site Staffs</th>
-                            <th scope="col">Pricing for specific type of Fuel</th>
-                            <th scope="col">Price management flexibility</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr v-if="!gasStations.count">
-                            <td colspan="7" class="text-center bg-warning" >
+                            <td colspan="7" class="text-center bg-warning">
                                 Currently there's no Gas Station added.
                             </td>
                         </tr>
@@ -47,8 +52,6 @@
                             <td>[[ gas.site_location ]]</td>
                             <td>[[ gas.site_manager ]]</td>
                             <td>[[ gas.site_staff.toString() ]]</td>
-                            <td>[[ gas.pricing_for_specific_type_of_fuel ]]</td>
-                            <td>[[ gas.price_management_flexibility ]]</td>
                             <td><a href="#" data-toggle="modal" v-on:click="fetchGasStation(gas.id)"
                                     data-target="#gasStationModal" class="badge badge-info">Edit</a></td>
                         </tr>
@@ -66,6 +69,46 @@
                         </li>
                     </ul>
                 </nav>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add Modal -->
+    <div class="modal fade" id="gasModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add Information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form v-on:submit.prevent="addGas">
+                    <div class="modal-body">
+                        <template v-if="viewing">
+                            <div class="text-center">
+                                <div class="spinner-grow text-primary" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
+                            </div>
+                        </template>
+                        <template v-else>
+                            {% include 'gas/GasAdd.html' %}
+                        </template>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <template v-if="saving">
+                            <button type="button" class="btn btn-primary" disabled><i class="fa fa-spinner fa-spin"></i>
+                                Save
+                                changes</button>
+                        </template>
+                        <template v-else>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </template>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
