--- a/templates/gas/GasEdit.html
+++ b/templates/gas/GasEdit.html
@@ -1,6 +1,19 @@
 <div class="form-row">
-    {% if request.user.position == 'Manager' and request.user.position == 'Cashier' %}
-    {% elif request.user.position == 'Owner' %}
+    <div class="form-group col-md-12">
+        <label>Name</label>
+        <input type="text" v-model="currentGas.name" class="form-control" {% if request.user.position == 'Cashier' %}
+            disabled {% endif %}>
+    </div>
+    <div class="form-group col-md-12">
+        <label for="inputCity">Site location</label>
+        <input type="text" v-model="currentGas.site_location" class="form-control"
+            {% if request.user.position == 'Cashier' %} disabled {% endif %}>
+    </div>
+    <div class="form-group col-md-12">
+        <label for="inputCity">Sales</label>
+        <input type="text" v-model="currentGas.sales" class="form-control" {% if request.user.position == 'Cashier' %}
+            disabled {% endif %}>
+    </div>
     <div class="form-group col-md-12">
         <label>Site Manager</label>
         <select class="custom-select" v-model="currentGas.site_manager">
@@ -13,37 +26,21 @@
         <label>Site Staffs</label>
         <select class="custom-select" multiple v-model="currentGas.site_staff">
             <option v-for="staff in staffs.results">[[ staff.full_name ]]</option>
-          </select>
+        </select>
     </div>
-    {% endif %}
+    <div class="form-group col-md-12">
+        <label>Type of fuels</label>
+        <select class="custom-select" multiple v-model="currentGas.fuels">
+            <option v-for="item in fuels.results">[[ item.name ]]</option>
+        </select>
+    </div>
 </div>
-<div class="form-group">
-    <label>Name</label>
-    <input type="text" v-model="currentGas.name" class="form-control"
-    {% if request.user.position == 'Cashier' %} disabled {% endif %}>
-</div>
+
 <div class="form-row">
     <div class="form-group col-md-12">
-        <label for="inputCity">Site location</label>
-        <input type="text" v-model="currentGas.site_location"  class="form-control"
-        {% if request.user.position == 'Cashier' %} disabled {% endif %}>
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-12">
-        <label for="inputCity">Sales</label>
-        <input type="text" v-model="currentGas.sales" class="form-control"
-        {% if request.user.position == 'Cashier' %} disabled {% endif %}>
-    </div>
-    <div class="form-group col-md-12">
-        <label for="inputCity">Volume of gasoline</label>
-        <input type="text" v-model="currentGas.volume_of_gasoline" class="form-control"
-        {% if request.user.position == 'Cashier' %} disabled {% endif %}>
-    </div>
-    <div class="form-group col-md-12">
-        <label for="inputCity">Price management flexibility</label>
+        <label for="inputCity">Prices</label>
         <input type="text" v-model="currentGas.price_management_flexibility" class="form-control"
-        {% if request.user.position == 'Cashier' %} disabled {% endif %}>
+            {% if request.user.position == 'Cashier' %} disabled {% endif %}>
     </div>
 </div>
 <hr>
@@ -52,16 +49,10 @@
     <div class="form-group col-md-6">
         <label for="inputCity">Created by</label>
         <input type="text" v-model="currentGas.created_by" disabled class="form-control"
-        {% if request.user.position == 'Cashier' %} disabled {% endif %}>
+            {% if request.user.position == 'Cashier' %} disabled {% endif %}>
     </div>
     <div class="form-group col-md-6">
         <label for="inputCity">Updated by</label>
         <input type="text" v-model="currentGas.updated_by" disabled class="form-control">
     </div>
 </div>
-<!-- <div class="form-row">
-    <div class="form-group col-md-12">
-        <label for="inputCity">Pricing for specific type of fuel</label>
-        <input type="text" v-model="currentGas.pricing_for_specific_type_of_fuel" class="form-control">
-    </div>
-</div> -->
