--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,6 +16,9 @@
                 </li>
                 {% elif request.user.position == 'Owner' or request.user.position == 'Manager' %}
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'sales' %}">Sales</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'gas' %}">Gas Station</a>
                 </li>
                 <li class="nav-item">
