renamed sales to transactions

--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
             <div class="card mb-3">
                 <a href="{% url 'sales' %}" class="card-header">Sales</a>
                 <div class="card-body">
-                    <p class="card-text">View all <strong>Sales</strong> data for today.
+                    <p class="card-text">View all <strong>Transaction</strong> made for today.
                     </p>
                 </div>
             </div>
@@ -61,9 +61,9 @@
         {% elif request.user.position == 'Owner' or request.user.position == 'Manager' %}
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
-                <a href="{% url 'sales' %}" class="card-header">Sales</a>
+                <a href="{% url 'sales' %}" class="card-header">Transactions</a>
                 <div class="card-body">
-                    <p class="card-text">View all <strong>Sales</strong> data for today.
+                    <p class="card-text">View all <strong>Transactions</strong> made.
                     </p>
                 </div>
             </div>
