--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,11 +12,11 @@
                 </li>
                 {% if request.user.position == 'Cashier' %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'sales' %}">Sales</a>
+                    <a class="nav-link" href="{% url 'sales' %}">Transactions</a>
                 </li>
                 {% elif request.user.position == 'Owner' or request.user.position == 'Manager' %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'sales' %}">Sales</a>
+                    <a class="nav-link" href="{% url 'sales' %}">Transactions</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'gas' %}">Gas Station</a>
