--- a/templates/sales/TransactionsEdit.html
+++ b/templates/sales/TransactionsEdit.html
@@ -1,15 +1,15 @@
 <div class="form-row">
     <div class="form-group col-md-12">
-        <label>Type of Fuel</label>
-        <select class="custom-select" v-model="currentSales.type_of_fuel">
-            <option v-for="fuel in typeOfFuel.results">
+        <label>Fuel</label>
+        <select class="custom-select" v-model="currentTransactions.fuel">
+            <option v-for="fuel in fuelPrices.results">
                 [[ fuel.name ]]
             </option>
         </select>
     </div>
     <div class="form-group col-md-12">
         <label>Gasoline Station assigned</label>
-        <select class="custom-select" v-model="currentSales.gas_station_assigned">
+        <select class="custom-select" v-model="currentTransactions.gas_station_assigned" disabled>
             <option v-for="gas in gasStations.results">
                 [[ gas.name ]]
             </option>
@@ -17,22 +17,22 @@
     </div>
     <div class="form-group col-md-12">
         <label>Sales</label>
-        <input type="text" v-model="currentSales.sales" class="form-control">
+        <input type="text" v-model="currentTransactions.sales" class="form-control">
     </div>
     <div class="form-group col-md-12">
-        <label>Price</label>
-        <input type="text" v-model="currentSales.price" class="form-control">
+        <label>Fuel price</label>
+        <input type="text" v-model="currentTransactions.fuel_price" disabled class="form-control">
     </div>
     {% if request.user.position == 'Owner' or request.user.position == 'Manager' %}
     <hr>
     <h6>Important info</h6>
     <div class="form-group col-md-12">
         <label>Created by</label>
-        <input type="text" v-model="currentSales.created_by" class="form-control" disabled>
+        <input type="text" v-model="currentTransactions.created_by" class="form-control" disabled>
     </div>
     <div class="form-group col-md-12">
         <label>Updated by</label>
-        <input type="text" v-model="currentSales.updated_by" class="form-control" disabled>
+        <input type="text" v-model="currentTransactions.updated_by" class="form-control" disabled>
     </div>
     {% endif %}
 </div>
