--- a/templates/price/PriceTable.html
+++ b/templates/price/PriceTable.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-- Prices
+- Fuel Prices
 {% endblock %}
 
 {% load static %}
@@ -9,7 +9,7 @@
 {% block content %}
 <div id="pos-price" v-cloak>
     <div class="mt-3">
-        <h1>Manage Prices</h1>
+        <h1>Manage Fuel Prices</h1>
         <hr>
         <div class="form-row">
             <div class="btn-group" role="group" aria-label="Basic example">
