--- a/templates/gas/GasAdd.html
+++ b/templates/gas/GasAdd.html
@@ -4,7 +4,9 @@
 <div class="form-row">
     <div class="form-group col-md-12">
         <label>Name</label>
-        <input type="text" v-model="newGas.name" class="form-control">
+        <select class="custom-select" v-model="newGas.name">
+            <option v-for="item in gasolineStations.results">[[ item.name ]]</option>
+        </select>
     </div>
     <div class="form-group col-md-12">
         <label>Site location</label>
@@ -25,13 +27,9 @@
         </select>
     </div>
     <div class="form-group col-md-12">
-        <label>Type of fuels</label>
-        <select class="custom-select" multiple v-model="newGas.fuels">
-            <option v-for="item in fuels.results">[[ item.name ]]</option>
+        <label>Fuel Prices</label>
+        <select class="custom-select" multiple v-model="newGas.fuel_prices">
+            <option v-for="item in fuels.results">[[ item.name ]] - [[item.price]]</option>
         </select>
-    </div>
-    <div class="form-group col-md-12">
-        <label>Price</label>
-        <input type="number" v-model="newGas.price_management_flexibility" class="form-control">
     </div>
 </div>
