--- a/templates/sales/TransactionsEdit.html
+++ b/templates/sales/TransactionsEdit.html
@@ -3,7 +3,7 @@
         <label>Fuel</label>
         <select class="custom-select" v-model="currentTransactions.fuel">
             <option v-for="fuel in fuelPrices.results">
-                [[ fuel.name ]]
+                [[ fuel.fuel_price ]]
             </option>
         </select>
     </div>
@@ -17,7 +17,8 @@
     </div>
     <div class="form-group col-md-12">
         <label>Sales</label>
-        <input type="text" v-model="currentTransactions.sales" class="form-control">
+        <input type="number" step="0.01" v-model="currentTransactions.sales" @keypress="isNumber($event)"
+         class="form-control">
     </div>
     <div class="form-group col-md-12">
         <label>Fuel price</label>
