addded the 'gas_station_assigned' for users cashier and manager

--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -31,6 +31,9 @@
                 <div class="col-md-12 col-sm-12">
                     <label>birthdate:</label> [[ profile.birthdate ]]
                 </div>
+                <div class="col-md-12 col-sm-12">
+                    <label>Gasoline Station assigned:</label> [[ profile.gas_station_assigned ]]
+                </div>
                 <button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="modal"
                     data-target="#profileModal" v-on:click="fetchLoginCredential(profile.id)">Edit</button>
             </div>
