changed sales to transaction in home

--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
         {% if request.user.position == 'Cashier' %}
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
-                <a href="{% url 'sales' %}" class="card-header">Sales</a>
+                <a href="{% url 'sales' %}" class="card-header">Transactions</a>
                 <div class="card-body">
                     <p class="card-text">View all <strong>Transaction</strong> made for today.
                     </p>
